# Rose

./: .gitignore  compile_commands.json
agent/: Cargo.toml  build.py  main.cpp  makefile
agent/.cargo/: config.toml
agent/src/: main.rs
client/: .history  main.py
client/profiles/: testprofile.toml
client/src/: commands.py  console.py  main.py  teamserver.py
server/: Cargo.toml
server/config/: profile.toml
server/src/: main.rs
server/src/listener/: mod.rs  routers.rs
server/src/teamserver/: mod.rs
