[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["macros", "tokio"] }
chrono = "0.4.3"
futures = "0.3.30"
jsonwebtoken = "9.3.0"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.122"
tokio = { version = "1.39.2", features = ["full"] }
tokio-tungstenite = "0.23.1"
toml = "0.8.19"
uuid = { version = "1.10.0", features = ["v7"] }
